deleted HH folder and fixed html and css coding

--- a/project1/index.html
+++ b/project1/index.html
@@ -43,30 +43,11 @@
         <p>© 2024 Temperature Converter. All rights reserved Group09.</p>
     </footer>
 <!--Don't forget to update your src with the java file in the project_1 folder-->
-    <script src="../test/java.js">
+    <script src="../test/java.js"></script>
 
-
-            <!-- Placeholder for graphic or additional content -->
-            <img src="https://via.placeholder.com/150" alt="Graphic placeholder">
-        </aside>
-        <article>
-            <p>This section contains additional information about temperature conversion, such as formulas, usage tips, or historical context. You can add any relevant information here.</p>
-        </article>
-    </main>
     <footer>
         <p>© 2024 Temperature Converter. All rights reserved.</p>
     </footer>
 
-    <script>
-        function convertTemperature() {
-            let fahrenheit = document.getElementById('fahrenheit').value;
-            let celsius = ((parseFloat(fahrenheit) - 32) * 5 / 9).toFixed(2);
-            document.getElementById('celsius').value = celsius;
-// 
-            // Display result below
-            document.getElementById('result').textContent = `${fahrenheit} °F = ${celsius} °C`;
-        }
-
-    </script>
 </body>
 </html>
