--- a/project1/index.html
+++ b/project1/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
-<link rel="stylesheet" href="../project1 copy/Assets/style.css">
+<link rel="stylesheet" href="../project1/assets/style.css">
 </head>
 <body>
     <header>
@@ -59,7 +59,7 @@
          <p>© Group 9 ~~ 2024 Temperature Converter ~~ Coding BootCamp 2024</p>
         </footer>
     </div>
-    <script src="../project1 copy/Assets/script.js"> </script>
+    <script src="../project1/assets/script.js"> </script>
   
 </body>
 
