--- a/project1/index.html
+++ b/project1/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../project1/assets/style.css">
+    <link rel="stylesheet" href="..//project1/assets/style.css">
 </head>
 
 <body>
     <header>
         <h1>Temperature Converter</h1>
     </header>
+
     <div id="wrapper">
         <main>
 
@@ -37,33 +38,85 @@
                 <label for="answer">Answer:</label>
                 <input type="text" id="answer" readonly>
 
-                <div class="button">
+                <div class="button-group">
                     <button onclick="convertTemperature()">Convert</button>
-
+                    <button onclick="saveConversion()">Save Conversion</button>
+                    </div>
+                
+                <div class="saved-conversions-wrapper">
+                    <label for="savedConversions">Saved Conversions:</label>
+                    <select id="savedConversions" onchange="loadConversion()">
+                        <option value="">Select a saved conversion</option>
+                    </select>
+                    <div class="clear-button">
+                    <button onclick="clearSavedConversions()">Clear Saved Conversions</button>
+                    </div>
                 </div>
-                <div class="result" id="result"></div>
-            </section>
-            <aside>
 
+                <div class="result" id="result"></div>
+
+                <!-- Button to trigger modal -->
+                 <div class="button-group2">
+                <button type="button" class="btn btn-info mt-3" data-toggle="modal" data-target="#exampleModalCenter">
+                    How to Use the Converter
+                </button>
+            </div>
+            </section>
+
+            <aside>
                 <!-- Thermometer Section -->
                 <div id="thermometerWrapper">
                     <div id="mercuryLevel"></div>
-                    <img id="thermometerClipart" src="..//project1/assets/image/Themometer_Blue.png"
-                        alt="Thermometer Clipart">
-
+                    <img id="thermometerClipart" src="..//project1/assets/image/Thermometer_Blue.png" alt="Thermometer Clipart">
+                </div>
             </aside>
+
             <article>
-                <p id="changeText">This section contains additional information about temperature conversion, such as
-                    formulas, usage
-                    tips,
-                    or historical context. You can add any relevant information here.</p>
+                <p id="changeText">This section contains additional information about temperature conversion.</p>
             </article>
+
         </main>
         <footer>
             <p>© Group 9 ~~ 2024 Temperature Converter ~~ Coding BootCamp 2024</p>
         </footer>
     </div>
-    <script src="../project1/assets/script.js"> </script>
+
+    <!-- Modal stuff -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">How to Use the Temperature Converter</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    To use the temperature converter:
+                    <ul>
+                        <li>Select the unit you want to convert from (Fahrenheit, Celsius, or Kelvin).</li>
+                        <li>Enter the temperature value in the input field.</li>
+                        <li>Select the unit you want to convert to.</li>
+                        <li>Click the "Convert" button to see the converted temperature.</li>
+                        <li>Click "Save Conversion" and save your current conversion.</li>
+                        <li>You can select saved conversions from the dropdown menu.</li>
+                        <li>Click "Clear Saved Conversions" to clear out all saved conversions.</li>
+                    </ul>
+                    The result will be displayed in the answer field below the input.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- All Scripts Req'd -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="..//project1/assets/script.js"></script>
+    <script src="..//project1/assets/save_script.js"></script>
 
 </body>
 
